--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # SSL, post 465
 #spring.mail.properties.mail.smtp.socketFactory.port = 465
 #spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=c:/tmp
+spring.servlet.multipart.max-file-size=2MB
+empleosapp.ruta.imagenes=c:/auditoriaWeb/img-cursos/
