--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,16 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=c:/tmp
 spring.servlet.multipart.max-file-size=2MB
 empleosapp.ruta.imagenes=c:/auditoriaWeb/img-cursos/
+
+
+# DATASOURCE (MYSQL 8.0)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/auditoriaweb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=lawliet15
+#JPA
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+# Table names physically
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
