--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=c:/tmp
 spring.servlet.multipart.max-file-size=2MB
 empleosapp.ruta.imagenes=c:/auditoriaWeb/img-cursos/
-
+#empleosapp.ruta.imagenes=C:/Users/Servidor/Documents/workspace-spring-tool-suite-4-4.14.0.RELEASE/auditoria/src/main/resources/static/images/cursos/
 
 # DATASOURCE (MYSQL 8.0)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
