arreglo de imagenes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ empleosapp.ruta.imagenes=c:/auditoriaWeb/img-cursos/
 
 # DATASOURCE (MYSQL 8.0)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/auditoriaweb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/auditoriaweb?useSSL=false&serverTimezone=America/Tijuana&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=lawliet15
 #JPA
