se añadieron las opciones para subir video y materiales, agregar al curso y descargar en detalles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=c:/tmp
-spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-file-size=2GB
+spring.servlet.multipart.max-request-size=2GB
 empleosapp.ruta.imagenes=c:/auditoriaWeb/img-cursos/
+empleosapp.ruta.videos=c:/auditoriaWeb/videos-cursos/
+empleosapp.ruta.materiales=c:/auditoriaWeb/materiales-cursos/
+
 #empleosapp.ruta.imagenes=C:/Users/Servidor/Documents/workspace-spring-tool-suite-4-4.14.0.RELEASE/auditoria/src/main/resources/static/images/cursos/
 
 # DATASOURCE (MYSQL 8.0)
